# micro-manager-cmake

./: CMakeLists.txt
DeviceAdapters/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.status  configure  libtool
DeviceAdapters/AAAOTF/: AAAOTF.lo  Makefile  Makefile.in  libmmgr_dal_AAAOTF.la
DeviceAdapters/AOTF/: Makefile  Makefile.in
DeviceAdapters/ASIFW1000/: ASIFW1000.lo  ASIFW1000Hub.lo  Makefile  Makefile.in  libmmgr_dal_ASIFW1000.la
DeviceAdapters/ASIStage/: ASIStage.lo  Makefile  Makefile.in  libmmgr_dal_ASIStage.la
DeviceAdapters/ASITiger/: ASICRISP.lo  ASIClocked.lo  ASIDevice.lo  ASIFWheel.lo  ASIHub.lo  ASIMMirror.lo  ASIPiezo.lo  ASITiger.lo  ASITigerComm.lo  ASIXYStage.lo  ASIZStage.lo  Makefile  Makefile.in  libmmgr_dal_ASITiger.la
DeviceAdapters/ASIWPTR/: Makefile  Makefile.in  libmmgr_dal_ASIWPTR.la  wptr.lo
DeviceAdapters/Aladdin/: Aladdin.lo  Makefile  Makefile.in  libmmgr_dal_Aladdin.la
DeviceAdapters/Andor/: Makefile  Makefile.in
DeviceAdapters/AndorLaserCombiner/: Makefile  Makefile.in
DeviceAdapters/Aquinas/: Aquinas.lo  Makefile  Makefile.in  libmmgr_dal_Aquinas.la
DeviceAdapters/Arduino/: Arduino.lo  Makefile  Makefile.in  libmmgr_dal_Arduino.la
DeviceAdapters/CARVII/: CARVII.lo  CARVIIHub.lo  Makefile  Makefile.in  libmmgr_dal_CARVII.la
DeviceAdapters/CSUW1/: CSUW1.lo  CSUW1Hub.lo  Makefile  Makefile.in  libmmgr_dal_CSUW1.la
DeviceAdapters/Cobolt/: Cobolt.lo  Makefile  Makefile.in  libmmgr_dal_Cobolt.la
DeviceAdapters/CoherentCube/: CoherentCube.lo  Makefile  Makefile.in  libmmgr_dal_CoherentCube.la
DeviceAdapters/Conix/: Conix.lo  Makefile  Makefile.in  libmmgr_dal_Conix.la
DeviceAdapters/Corvus/: Corvus.lo  Makefile  Makefile.in  libmmgr_dal_Corvus.la
DeviceAdapters/DTOpenLayer/: Makefile  Makefile.in
DeviceAdapters/DemoCamera/: CMakeLists.txt  DemoCamera.cpp  DemoCamera.h  DemoCamera.lo  Makefile  Makefile.in  libmmgr_dal_DemoCamera.la
DeviceAdapters/FreeSerialPort/: FreeSerialPort.lo  Makefile  Makefile.in  libmmgr_dal_FreeSerialPort.la
DeviceAdapters/HIDManager/: Makefile  Makefile.in
DeviceAdapters/ITC18/: Makefile  Makefile.in
DeviceAdapters/ImageProcessorChain/: ImageProcessorChain.lo  Makefile  Makefile.in  libmmgr_dal_ImageProcessorChain.la
DeviceAdapters/K8055/: K8055.lo  K8055Interface.lo  Makefile  Makefile.in  libmmgr_dal_K8055.la
DeviceAdapters/K8061/: K8061.lo  K8061Interface.lo  Makefile  Makefile.in  libmmgr_dal_K8061.la
DeviceAdapters/LeicaDMI/: LeicaDMI.lo  LeicaDMIModel.lo  LeicaDMIScopeInterface.lo  Makefile  Makefile.in  libmmgr_dal_LeicaDMI.la
DeviceAdapters/LeicaDMR/: LeicaDMR.lo  LeicaDMRHub.lo  Makefile  Makefile.in  libmmgr_dal_LeicaDMR.la
DeviceAdapters/LeicaDMSTC/: LeicaDMSTC.lo  LeicaDMSTCHub.lo  Makefile  Makefile.in  libmmgr_dal_LeicaDMSTC.la
DeviceAdapters/Ludl/: Ludl.lo  Makefile  Makefile.in  libmmgr_dal_Ludl.la
DeviceAdapters/LudlLow/: Makefile  Makefile.in  libmmgr_dal_LudlLow.la
DeviceAdapters/LumencorSpectra/: Makefile  Makefile.in  Spectra.lo  libmmgr_dal_LumencorSpectra.la
DeviceAdapters/MP285/: MP285.lo  MP285Ctrl.lo  MP285Error.lo  MP285XYStage.lo  MP285ZStage.lo  Makefile  Makefile.in  libmmgr_dal_MP285.la
DeviceAdapters/MaestroServo/: MaestroServo.lo  Makefile  Makefile.in  libmmgr_dal_MaestroServo.la
DeviceAdapters/Marzhauser/: Makefile  Makefile.in  Marzhauser.lo  libmmgr_dal_Marzhauser.la
DeviceAdapters/Marzhauser-LStep/: LStep.lo  Makefile  Makefile.in  libmmgr_dal_MarzhauserLStep.la
DeviceAdapters/MicroPoint/: Makefile  Makefile.in  MicroPoint.lo  libmmgr_dal_MicroPoint.la
DeviceAdapters/Neos/: Makefile  Makefile.in  Neos.lo  libmmgr_dal_Neos.la
DeviceAdapters/Nikon/: Makefile  Makefile.in  Nikon.lo  libmmgr_dal_Nikon.la
DeviceAdapters/NikonTE2000/: Makefile  Makefile.in  NikonTE2000.lo  TEHub.lo  libmmgr_dal_NikonTE2000.la
DeviceAdapters/Omicron/: Makefile  Makefile.in  Omicron.lo  libmmgr_dal_Omicron.la
DeviceAdapters/OpenCVgrabber/: Makefile  Makefile.in
DeviceAdapters/Oxxius/: Makefile  Makefile.in  Oxxius.lo  libmmgr_dal_Oxxius.la
DeviceAdapters/PI/: Makefile  Makefile.in  PI.lo  libmmgr_dal_PI.la
DeviceAdapters/PI_GCS/: Makefile  Makefile.in  PI_GCS.lo  libmmgr_dal_PIGCS.la
DeviceAdapters/PI_GCS_2/: Controller.lo  Makefile  Makefile.in  PIGCSControllerCom.lo  PIGCSControllerDLL.lo  PIXYStage_DLL.lo  PIZStage_DLL.lo  PI_GCS_2.lo  libmmgr_dal_PIGCS2.la
DeviceAdapters/PVCAM/: Makefile  Makefile.in
DeviceAdapters/ParallelPort/: Makefile  Makefile.in
DeviceAdapters/Pecon/: Makefile  Makefile.in  Pecon.lo  libmmgr_dal_Pecon.la
DeviceAdapters/Piezosystem_30DV50/: Makefile  Makefile.in  Piezosystem_30DV50.lo  libmmgr_dal_Piezosystem_30DV50.la
DeviceAdapters/Piezosystem_NV120_1/: Makefile  Makefile.in  Piezosystem_NV120_1.lo  libmmgr_dal_Piezosystem_NV120_1.la
DeviceAdapters/Piezosystem_NV40_1/: Makefile  Makefile.in  Piezosystem_NV40_1.lo  libmmgr_dal_Piezosystem_NV40_1.la
DeviceAdapters/Piezosystem_NV40_3/: Makefile  Makefile.in  Piezosystem_NV40_3.lo  libmmgr_dal_Piezosystem_NV40_3.la
DeviceAdapters/Piezosystem_dDrive/: Makefile  Makefile.in  Piezosystem_dDrive.lo  devicelist.lo  libmmgr_dal_Piezosystem_dDrive.la
DeviceAdapters/PrecisExcite/: Makefile  Makefile.in  PrecisExcite.lo  libmmgr_dal_PrecisExcite.la
DeviceAdapters/PrincetonInstruments/: Makefile  Makefile.in
DeviceAdapters/Prior/: Makefile  Makefile.in  Prior.lo  libmmgr_dal_Prior.la
DeviceAdapters/PriorLegacy/: Makefile  Makefile.in  PriorLegacy.lo  libmmgr_dal_PriorLegacy.la
DeviceAdapters/QCam/: Makefile  Makefile.in
DeviceAdapters/Sapphire/: Makefile  Makefile.in  Sapphire.lo  libmmgr_dal_Sapphire.la
DeviceAdapters/Scientifica/: Makefile  Makefile.in  Scientifica.lo  libmmgr_dal_Scientifica.la
DeviceAdapters/ScionCam/: Makefile  Makefile.in
MMCore/: CMakeLists.txt
MMCoreJ_wrap/: CMakeLists.txt  MMCoreJ.i  TaggedImage.java
MMCorePy_wrap/: CMakeLists.txt  MMCorePy.i  setup.py
acqEngine/: CMakeLists.txt
autofocus/: CMakeLists.txt  Makefile  Makefile.in
mmstudio/: CMakeLists.txt
plugins/: CMakeLists.txt
(+599 files in other folders)
