add_subdirectory(DemoCamera)

# add_subdirectory(AAAOTF)
# add_subdirectory(Aladdin)
# add_subdirectory(AOTF)
# add_subdirectory(Andor)
# add_subdirectory(AndorLaserCombiner)
# add_subdirectory(Aquinas)
# add_subdirectory(Arduino)
# add_subdirectory(ASIFW1000)
# add_subdirectory(ASIStage)
# add_subdirectory(ASITiger)
# add_subdirectory(ASIWPTR)
# add_subdirectory(CARVII)
# add_subdirectory(Cobolt)
# add_subdirectory(CoherentCube)
# add_subdirectory(Conix)
# add_subdirectory(CSUW1)
# add_subdirectory(dc1394)
# add_subdirectory(DTOpenLayer)
# add_subdirectory(Corvus)
# add_subdirectory(ImageProcessorChain)
# add_subdirectory(ITC18)
# add_subdirectory(FreeSerialPort)
# add_subdirectory(HIDManager)
# add_subdirectory(kdv)
# add_subdirectory(K8055)
# add_subdirectory(K8061)
# add_subdirectory(LeicaDMI)
# add_subdirectory(LeicaDMR)
# add_subdirectory(LeicaDMSTC)
# add_subdirectory(Ludl)
# add_subdirectory(LudlLow)
# add_subdirectory(LumencorSpectra)
# add_subdirectory(MaestroServo)
# add_subdirectory(Marzhauser)
# add_subdirectory(Marzhauser-LStep)
# add_subdirectory(MicroPoint)
# add_subdirectory(MP285)
# add_subdirectory(Neos)
# add_subdirectory(NIDAQ)
# add_subdirectory(Nikon)
# add_subdirectory(NikonTE2000)
# add_subdirectory(nPoint)
# add_subdirectory(Omicron)
# add_subdirectory(OpenCVgrabber)
# add_subdirectory(Oxxius)
# add_subdirectory(PI)
# add_subdirectory(PI_GCS)
# add_subdirectory(PI_GCS_2)
# add_subdirectory(Piezosystem_30DV50)
# add_subdirectory(Piezosystem_dDrive)
# add_subdirectory(Piezosystem_NV120_1)
# add_subdirectory(Piezosystem_NV40_1)
# add_subdirectory(Piezosystem_NV40_3)
# add_subdirectory(Prior)
# add_subdirectory(PriorLegacy)
# add_subdirectory(ParallelPort)
# add_subdirectory(Pecon)
# add_subdirectory(PrecisExcite)
# add_subdirectory(PVCAM)
# add_subdirectory(PrincetonInstruments)
# add_subdirectory(QCam)
# add_subdirectory(Sapphire)
# add_subdirectory(ScionCam)
# add_subdirectory(Scientifica)
# add_subdirectory(SimpleCam)
# add_subdirectory(Sensicam)
# add_subdirectory(SerialManager)
# add_subdirectory(SimpleAutofocus)
# add_subdirectory(Spot)
# add_subdirectory(SpectralLMM5)
# add_subdirectory(SutterLambda)
# add_subdirectory(SutterStage)
# add_subdirectory(Thorlabs)
# add_subdirectory(ThorlabsDCxxxx)
# add_subdirectory(ThorlabsFilterWheel)
# add_subdirectory(ThorlabsSC10)
# add_subdirectory(Tofra)
# add_subdirectory(USBManager)
# add_subdirectory(Utilities)
# add_subdirectory(VariLC)
# add_subdirectory(Vincent)
# add_subdirectory(Vortran)
# add_subdirectory(Video4Linux)
# add_subdirectory(XCite120PC_Exacte)
# add_subdirectory(XCiteLed)
# add_subdirectory(Xcite)
# add_subdirectory(Yokogawa)
# add_subdirectory(ZeissCAN)
# add_subdirectory(ZeissCAN29)
