add_subdirectory(PixelCalibrator)
add_subdirectory(IntelligentAcquisition)
add_subdirectory(SlideExplorer)
add_subdirectory(Recall)
add_subdirectory(StageControl)
add_subdirectory(MultiCamera)
add_subdirectory(SplitView)
add_subdirectory(NewImageFlipper)
add_subdirectory(Big)
add_subdirectory(CRISP)
add_subdirectory(BFCorrector)
add_subdirectory(Gaussian)
add_subdirectory(HCS)
add_subdirectory(ClojureEditor)

# Clojure dependant
add_subdirectory(DataBrowser)


# Not seen in old Makefile.am, outdated ?

# add_subdirectory(Bleach)
# add_subdirectory(DLLAutoReloader)
# add_subdirectory(Example)
# add_subdirectory(ImageFlipper)
# add_subdirectory(LocalWeightedMean)
# add_subdirectory(MetadataExporter)
# add_subdirectory(Projector)
# add_subdirectory(Tracker)
# add_subdirectory(TwoPhoton)
# add_subdirectory(SlideExplorer2)
# add_subdirectory(OMETiff)
